--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.1",
-
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +38,7 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
