--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
